--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <label class="navbar">Vinod Seervi</label>
         <ul>
             <li><a class="active" href="#">Home</a></li>
-            <li><a href="About Me/about.html">About Me</a></li>
+            <li><a href="About Me/">About Me</a></li>
             <li><a href="Room/logo.html">Chat Room</a></li>
             <li><a href="https://github.com/vinodseervi">Work</a></li>
             <li><a href="C:\Users\vinod\Desktop\navigation bar\box\box.html">Trips</a></li>
